@@ -3,6 +3,7 @@ Release 1.2.1
 * bug fix for interaction of matrix transpose and square bracket substitutions
 * renaming mxLISRELObjective() to imxLISRELObjective(), LISREL objective function is not yet implementated.
 * improved error messages when a free parameter has multiple lbounds/ubounds
+* improved error messages when passing strings into mxModel()
 
 Release 1.2.0-1926 (February 04, 2012)
 ======================================
